--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"lint": "eslint 'src/**/*.ts'",
 		"prettier:write": "prettier --write src/**/*.*",
 		"start": "npm run build && node dist/index.js",
-		"dev": "node_modules/.bin/babel-node src/index.ts --extensions \".ts\" --inspect",
+		"dev": "nodemon --exec node_modules/.bin/babel-node src/index.ts --extensions \".ts\" --inspect",
 		"tsc": "tsc",
 		"build": "rm -rf ./dist && npm run tsc && npm run lint && babel src -d dist --extensions \".ts\" --source-maps inline --copy-files",
 		"lint:fix": "eslint --fix \"src/**/*.{js,ts,tsx}\"",
